# cosyvoice-qinche-sft

./: .gitignore  README.md  inference.sh  path.sh  pyproject.toml  requirements.txt  run.sh
conf/: cosyvoice2-qinche.yaml  cosyvoice2.yaml
cosyvoice/cli/: cosyvoice.py
cosyvoice/dataset/: dataset.py
cosyvoice/flow/: flow.py
cosyvoice/hifigan/: f0_predictor.py
cosyvoice/inference/: audio.py  inference.py
cosyvoice/llm/: llm.py
cosyvoice/transformer/: upsample_encoder.py
cosyvoice/utils/: executor.py  file_utils.py  mask.py  train_utils.py
data/: dev.data.list  train.data.list
examples/: my_tts_text.json
local/: prepare_data.py
my_inference/: sft_inference.py  swanlab_audio.py  zero-shot.py
script/: extract_text_from_audio.py  remove_short_txt_and_audio.py  run_extract_and_clean.sh  run_extract_and_clean_all.sh  split.py
tensorboard/cosyvoice2/llm/torch_ddp/: events.out.tfevents.1772371770.ubun.2870886.0  events.out.tfevents.1772372527.ubun.2877011.0  events.out.tfevents.1772417089.ubun.2919531.0  events.out.tfevents.1772420235.ubun.2950632.0  events.out.tfevents.1772420540.ubun.2955035.0  events.out.tfevents.1772420765.ubun.2958929.0
tools/: data_save_process.py  extract_embedding.py  extract_speech_token.py  save_spk2info.py
